# lem-in42

./: CMakeLists.txt  Makefile  author  errors.txt  ex_lem  hello  lem-in  out.txt
Maps/: 100_map  4000_68steps.map
includes/: lem_in.h
src/: find_ways.c  find_ways_count_steps_of_ways.c  find_ways_del_ways_restore_links.c  find_ways_find_short_way.c  find_ways_set_minus.c  find_ways_write_way.c  ft_1.c  ft_2.c  main.c  print_result.c  print_result2.c  validation_add_rooms_links.c  validation_fill_links_rooms.c  validation_get_line.c  validation_get_links.c  validation_get_num_ants.c  validation_get_number.c  validation_get_rooms.c  validation_init.c  validation_parse_input.c  validation_set_error_free.c  validation_set_room_name.c  validation_test_empty_links.c
